jswt-parser/src/snapshots/jswt_parser__class__test__class_declaration.snap
---
source: jswt-parser/src/class.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_class_declaration",
                    module: "module/test_class_declaration",
                    start: 0,
                    end: 35,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_class_declaration",
                        module: "module/test_class_declaration",
                        start: 0,
                        end: 35,
                    },
                    source_elements: [
                        ClassDeclaration(
                            ClassDeclarationElement {
                                span: Span {
                                    file: "test_class_declaration",
                                    module: "module/test_class_declaration",
                                    start: 0,
                                    end: 35,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_class_declaration",
                                        module: "module/test_class_declaration",
                                        start: 6,
                                        end: 7,
                                    },
                                    value: "A",
                                },
                                body: ClassBody {
                                    span: Span {
                                        file: "test_class_declaration",
                                        module: "module/test_class_declaration",
                                        start: 8,
                                        end: 35,
                                    },
                                    class_elements: [
                                        Constructor(
                                            ClassConstructorElement {
                                                span: Span {
                                                    file: "test_class_declaration",
                                                    module: "module/test_class_declaration",
                                                    start: 10,
                                                    end: 33,
                                                },
                                                params: FormalParameterList {
                                                    span: Span {
                                                        file: "test_class_declaration",
                                                        module: "module/test_class_declaration",
                                                        start: 21,
                                                        end: 29,
                                                    },
                                                    parameters: [
                                                        FormalParameterArg {
                                                            span: Span {
                                                                file: "test_class_declaration",
                                                                module: "module/test_class_declaration",
                                                                start: 22,
                                                                end: 28,
                                                            },
                                                            ident: Identifier {
                                                                span: Span {
                                                                    file: "test_class_declaration",
                                                                    module: "module/test_class_declaration",
                                                                    start: 22,
                                                                    end: 23,
                                                                },
                                                                value: "a",
                                                            },
                                                            type_annotation: TypeAnnotation {
                                                                span: Span {
                                                                    file: "test_class_declaration",
                                                                    module: "module/test_class_declaration",
                                                                    start: 25,
                                                                    end: 28,
                                                                },
                                                                ty: Identifier(
                                                                    IdentifierType {
                                                                        name: "i32",
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                                body: BlockStatement {
                                                    span: Span {
                                                        file: "test_class_declaration",
                                                        module: "module/test_class_declaration",
                                                        start: 30,
                                                        end: 33,
                                                    },
                                                    statements: StatementList {
                                                        statements: [],
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
