jswt-parser/src/snapshots/jswt_parser__class__test__class_method_declaration_with_this_binding.snap
---
source: jswt-parser/src/class.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                source_elements: SourceElements {
                    source_elements: [
                        ClassDeclaration(
                            ClassDeclarationElement {
                                span: Span {
                                    file: "test.1",
                                    module: "module/test.1",
                                    start: 13,
                                    end: 126,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 19,
                                        end: 20,
                                    },
                                    value: "A",
                                },
                                body: ClassBody {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 21,
                                        end: 126,
                                    },
                                    class_elements: [
                                        Constructor(
                                            ClassConstructorElement {
                                                span: Span {
                                                    file: "test.1",
                                                    module: "module/test.1",
                                                    start: 40,
                                                    end: 112,
                                                },
                                                params: FormalParameterList {
                                                    parameters: [
                                                        FormalParameterArg {
                                                            ident: Identifier {
                                                                span: Span {
                                                                    file: "test.1",
                                                                    module: "module/test.1",
                                                                    start: 52,
                                                                    end: 53,
                                                                },
                                                                value: "a",
                                                            },
                                                            type_annotation: TypeAnnotation {
                                                                span: Span {
                                                                    file: "test.1",
                                                                    module: "module/test.1",
                                                                    start: 55,
                                                                    end: 58,
                                                                },
                                                                ty: Primitive(
                                                                    I32,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                                body: BlockStatement {
                                                    span: Span {
                                                        file: "test.1",
                                                        module: "module/test.1",
                                                        start: 60,
                                                        end: 112,
                                                    },
                                                    statements: StatementList {
                                                        statements: [
                                                            Expression(
                                                                ExpressionStatement {
                                                                    span: Span {
                                                                        file: "test.1",
                                                                        module: "module/test.1",
                                                                        start: 83,
                                                                        end: 94,
                                                                    },
                                                                    expression: Assignment(
                                                                        BinaryExpression {
                                                                            span: Span {
                                                                                file: "test.1",
                                                                                module: "module/test.1",
                                                                                start: 83,
                                                                                end: 93,
                                                                            },
                                                                            left: MemberDot(
                                                                                MemberDotExpression {
                                                                                    span: Span {
                                                                                        file: "test.1",
                                                                                        module: "module/test.1",
                                                                                        start: 83,
                                                                                        end: 89,
                                                                                    },
                                                                                    expression: This(
                                                                                        ThisExpression {
                                                                                            span: Span {
                                                                                                file: "test.1",
                                                                                                module: "module/test.1",
                                                                                                start: 83,
                                                                                                end: 87,
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                    target: Identifier {
                                                                                        span: Span {
                                                                                            file: "test.1",
                                                                                            module: "module/test.1",
                                                                                            start: 88,
                                                                                            end: 89,
                                                                                        },
                                                                                        value: "a",
                                                                                    },
                                                                                },
                                                                            ),
                                                                            op: Assign(
                                                                                Span {
                                                                                    file: "test.1",
                                                                                    module: "module/test.1",
                                                                                    start: 90,
                                                                                    end: 91,
                                                                                },
                                                                            ),
                                                                            right: Identifier(
                                                                                IdentifierExpression {
                                                                                    span: Span {
                                                                                        file: "test.1",
                                                                                        module: "module/test.1",
                                                                                        start: 92,
                                                                                        end: 93,
                                                                                    },
                                                                                    ident: Identifier {
                                                                                        span: Span {
                                                                                            file: "test.1",
                                                                                            module: "module/test.1",
                                                                                            start: 92,
                                                                                            end: 93,
                                                                                        },
                                                                                        value: "a",
                                                                                    },
                                                                                },
                                                                            ),
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
